--- a/assets/css/landing.css
+++ b/assets/css/landing.css
@@ -198,24 +198,22 @@ input[type=text]:focus {
 #featured_article {
 	float: left;
 	position: relative;
+	background-image: url("../img/landing-page/featured-image.jpg");
+	background-size: cover;
 	width: 65%;
 	height: 600px;
-}
-#featured_picture {
-	height: 600px;
-	margin: 0px auto;
-	z-index: -10;
+	overflow: hidden;
 }
 #featured_picture img {
 	height: 600px;
 }
 #article_text {
-	padding-left: 10px;
+	width: 100%;
 	height: 150px;
-	width: 848px;
 	position: absolute;
-	overflow: hidden;
+	right: 0;
 	bottom: 0;
+	overflow: hidden;
 	background-color: black;
 	opacity: 0.7;
 	transition: linear 0.1s;
@@ -223,27 +221,27 @@ input[type=text]:focus {
 #article_text:hover {
 	opacity: 0.9;
 	transform: scale(1.005);
-	overflow: hidden;
 }
 #article_title {
 	color: white;
 	text-shadow: 1px 1px black;
 	font-family: 'Oswald', sans-serif;
 	font-size: 6em;
+	padding: 2px 2px 0px 2px;
 }
 #article_title img {
 	float: right;
 	height: 40px;
 	width: 40x;
-	padding: 30px 20px 0 0;
+	padding: 30px 20px 10px 0;
 	opacity: 0.8;
 	transition: linear 0.1s;
 }
 #article_sneakpeek {
-	padding: 0 5px 0 5px;
+	padding: 0 0 0 5px;
 	color: white;
 	font-family: 'Hind', sans-serif;
-	font-size: 2em;
+	font-size: 1.8em;
 }
 #today_info {
 	position: relative;
