--- a/assets/css/landing.css
+++ b/assets/css/landing.css
@@ -243,6 +243,10 @@ input[type=text]:focus {
 	font-family: 'Hind', sans-serif;
 	font-size: 1.8em;
 }
+
+
+/* -- SIDE BAR -- */
+
 #today_info {
 	position: relative;
 	float: left;
@@ -291,7 +295,7 @@ input[type=text]:focus {
 }
 #weather {
 	height: 30%;
-	width: 100%;
+	width: 90%;
 	padding-left: 5%;
 	opacity: 0.8;
 	transition: linear 0.1s;
@@ -301,11 +305,12 @@ input[type=text]:focus {
 }
 #weather img {
 	float: left;
-	width: 30%;
+	width: 40%;
 }
 #forecast {
-	float: right;
-	width: 60%;
+	text-align: center;
+	float: left;
+	width: 50%;
 	font-family: 'Martel Sans', sans-serif;
 }
 #forecast_title {
@@ -317,6 +322,28 @@ input[type=text]:focus {
 #more_forecast {
 	padding-top: 10px;
 	font-size: 1em;
+}
+#latest_news {
+	height: 55%;
+	width: 100%;
+}
+#latest_heading {
+	padding-left: 10px;
+	font-size: 2.5em;
+	font-family: 'Hind', sans-serif;
+	font-style: italic;
+	font-weight: 800;
+	text-shadow: 0.1px 0.1px gray;
+	color: #8F0000;
+}
+.latest_article {
+	width: 90%;
+	margin: 0 auto;
+	padding: 10px 0px 5px 0px;
+	font-size: 1.5em;
+	font-family: 'Calibri', sans-serif;
+	font-weight: 700;
+	border-bottom: thin dotted black;
 }
 
 /*-------------*/
@@ -356,8 +383,4 @@ input[type=text]:focus {
 	text-shadow: 0.1px 0.1px gray;
 	padding: 5px 0 0 20px;
 	border-bottom: medium solid #00005C;
-}
-#latest {
-	color: #800000;
-	border-bottom: medium solid #800000;
 }
