--- a/assets/css/landing.css
+++ b/assets/css/landing.css
@@ -211,6 +211,7 @@ input[type=text]:focus {
 	width: 100%;
 	height: 150px;
 	position: absolute;
+	text-align: center;
 	right: 0;
 	bottom: 0;
 	overflow: hidden;
@@ -351,8 +352,8 @@ input[type=text]:focus {
 /*-------------*/
 
 #content {
-	height: 1000px;
 	width: 95%;
+	height: 800px;
 	margin: 0 auto;
 	margin-top: 20px;
 	background-color: white;
@@ -383,4 +384,58 @@ input[type=text]:focus {
 	text-shadow: 0.1px 0.1px gray;
 	padding: 5px 0 0 20px;
 	border-bottom: medium solid #00005C;
+}
+.main_article {
+	height: 40%;
+}
+.article_pic img {
+	float: left;
+	width: 40%;
+	padding: 10px 5px;
+}
+.article_heading {
+	float: left;
+	width: 50%;
+	font-size: 1.6em;
+	font-weight: 600;
+	font-family: 'Roboto', sans-serif;
+	padding: 10px 5px;
+}
+.more {
+	width: 80%;
+	padding: 5px;
+	font-size: 1.2em;
+	font-family: 'Calibri', sans-serif;
+	border-bottom: thin dotted black;
+	opacity: 0.9;
+}
+.more:hover {
+	opacity: 1;
+}
+#more_articles {
+	float: right;
+	padding-right: 20px;
+	font-family: 'Oswald', sans-serif;
+	font-size: 2.5em;
+	font-weight: 600;
+	font-style: italic;
+	color: #00005C;
+	opacity: 0.8;
+	transition: linear 0.1s;
+}
+#more_articles:hover {
+	opacity: 1;
+}
+
+
+/*-----------*/
+/*-- FOOTER--*/
+/*-----------*/
+
+#footer {
+	width: 100%;
+	height: 200px;
+	background-color: black;
+	position: absolute;
+	margin-top: 100px;
 }
