--- a/assets/css/landing.css
+++ b/assets/css/landing.css
@@ -30,7 +30,7 @@ body {
 #title {
 	float: left;
 	width: 20%;
-	background-color: black;
+	background-color: #000014;
 	border-right: thin solid white;
 	background-image: url('http://www.transparenttextures.com/patterns/dark-matter.png');
 }
@@ -53,7 +53,7 @@ body {
 	float: left;
 	width: calc(80% - 1px);
 	height: 126px;
-	background-color: black;
+	background-color: #000014;
 	background-image: url('http://www.transparenttextures.com/patterns/dark-matter.png');
 }
 #top_set {
@@ -353,12 +353,10 @@ input[type=text]:focus {
 
 #content {
 	width: 95%;
-	height: 800px;
+	height: 750px;
 	margin: 0 auto;
 	margin-top: 20px;
 	background-color: white;
-	border: thin solid black;
-	border-radius: 2%;
 }
 .article_box {
 	float: left;
@@ -434,8 +432,82 @@ input[type=text]:focus {
 
 #footer {
 	width: 100%;
-	height: 200px;
-	background-color: black;
+	height: 400px;
+	background-color: #000014;
+	background-image: url('http://www.transparenttextures.com/patterns/dark-matter.png');
 	position: absolute;
 	margin-top: 100px;
+}
+#footer_links {
+	height: 70%;
+}
+#site_map {
+	float: left;
+	height: 100%;
+	width: 30%;
+}
+.footer_list {
+	width: 25%;
+	height: 100%;
+	margin: 0 10%;
+	padding-top: 30px;
+	color: #B2B2B2;
+	font-family: 'Oswald', sans-serif;
+	font-size: 1.3em;
+
+}
+.footer_heading {
+	font-size: 1.4em;
+	padding: 5px 5px 5px 0;
+}
+.footer_item {
+	width: 80%;
+	padding: 5px 0 5px 10px;
+	transition: linear 0.2s;
+}
+.footer_item:hover {
+	background-color: black;
+}
+#site_info {
+	float: left;
+	height: 100%;
+	width: 30%;
+}
+#subscription {
+	width: 40%;
+	margin: 0 auto;
+	height: 100%;
+	float: left;
+	padding-top: 50px;
+}
+#subscription_heading {
+	font-size: 2em;
+	font-family: 'Oswald', sans-serif;
+	color: #B22400;
+}
+#subscription_subheading {
+	font-size: 1.5em;
+	font-family: 'Roboto', sans-serif;
+	color: white;
+	padding: 10px 0 0 5px;
+}
+#subscription #search_container {
+	float: left;
+}
+#subscribe_button {
+	position: absolute;
+	background-color: #E6E6E6;
+	color: black;
+	font-family: 'Oswald', sans-serif;
+	top: 45%;
+	padding: 5px 10px 5px 10px;
+	margin-left: 10px;
+	font-size: 1.8em;
+	border-radius: 10%;
+	opacity: 0.8;
+	box-shadow: 1px 1px 1px black;
+	transition: linear 0.2s;
+}
+#subscribe_button:hover {
+	opacity: 1;
 }
