--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -233,7 +233,7 @@ ul {
   .main-content #front-page-articles .row {
     padding-top: 1%; }
     .main-content #front-page-articles .row .section {
-      border-radius: 5px;
+      border-radius: 10px;
       transition: linear 0.2s; }
       .main-content #front-page-articles .row .section:hover {
         box-shadow: 0px 0px 15px -2px #333; }
@@ -266,5 +266,97 @@ ul {
     transition: linear 0.1s; }
     .main-content #more-news:hover {
       opacity: 1; }
+
+.footer {
+  width: 100%;
+  margin-top: 5%;
+  padding-top: 2%;
+  background-color: black;
+  background-image: url("http://www.transparenttextures.com/patterns/dark-matter.png");
+  font-family: "Oswald";
+  color: #B2B2B2; }
+  .footer .main #sections {
+    font-size: 2em; }
+    .footer .main #sections .list {
+      padding: 1%;
+      font-family: "Open Sans", sans-serif;
+      font-size: 0.6em; }
+      .footer .main #sections .list a {
+        color: #B2B2B2; }
+        .footer .main #sections .list a:hover {
+          text-decoration: none; }
+      .footer .main #sections .list .section {
+        width: 40%;
+        padding: 1%;
+        transition: linear 0.1s; }
+        .footer .main #sections .list .section:hover {
+          background-color: #101010;
+          color: white; }
+  .footer .main .heading {
+    color: #B22400;
+    font-family: "Oswald";
+    font-size: 2em; }
+  .footer .main .subheading {
+    color: #B2B2B2;
+    padding: 1% 0 2% 1%;
+    font-family: "Open Sans", sans-serif;
+    font-size: 1.5em; }
+  .footer .main .email-form {
+    padding-bottom: 5%; }
+    .footer .main .email-form input[type="text"] {
+      width: 60%;
+      max-width: 60%;
+      padding: 1% 2% 1% 2%;
+      outline: none;
+      border: none;
+      border-radius: 15px;
+      background-color: #C9C9C9;
+      color: #6B6B6B;
+      font-family: "Open Sans", sans-serif;
+      font-size: 1.3em; }
+      @media (max-width: 768px) {
+        .footer .main .email-form input[type="text"] {
+          font-size: 1.5em;
+          padding: 1%;
+          width: 40%;
+          max-width: 50%; } }
+      .footer .main .email-form input[type="text"]:focus {
+        background-color: #D9D9D9;
+        box-shadow: 0px 0px 25px -2px #333; }
+  .footer .main a {
+    color: black; }
+    .footer .main a:hover {
+      text-decoration: none; }
+  .footer .main .subscribe-btn {
+    background-color: #B8B8B8;
+    border-radius: 10px;
+    padding: 1.5%;
+    margin-left: 1%;
+    font-family: "Oswald";
+    font-size: 1.5em;
+    transition: linear 0.1s; }
+    .footer .main .subscribe-btn:hover {
+      background-color: #E3E3E3; }
+  .footer .social-media .links {
+    text-align: center;
+    padding-bottom: 1%; }
+    @media (max-width: 768px) {
+      .footer .social-media .links {
+        margin-top: 5%; } }
+    .footer .social-media .links img {
+      width: 30px;
+      margin: 0 0.5% 0 0.5%;
+      opacity: 0.7;
+      transition: linear 0.2s; }
+      .footer .social-media .links img:hover {
+        opacity: 0.9; }
+  .footer .social-media .copyright {
+    text-align: center;
+    font-family: "Open Sans", sans-serif;
+    font-size: 1.1em; }
+    .footer .social-media .copyright a {
+      color: white; }
+      .footer .social-media .copyright a:hover {
+        text-decoration: none; }
 
 /*# sourceMappingURL=main.css.map */
