--- a/assets/css/main.sass
+++ b/assets/css/main.sass
@@ -1,6 +1,6 @@
 $base-font: 'Roboto', sans-serif
 $secondary-font: 'Open Sans', sans-serif
-$featured-title: 'Oswald'
+$tertiary-font: 'Oswald'
 $title-text-color: #B2B2B2
 body 
 	position: relative
@@ -171,7 +171,7 @@ ul
 			padding: 1.5%
 			color: #D1D1D1
 			font:
-				family: $featured-title
+				family: $tertiary-font
 			transition: linear 0.1s
 			#title
 				font-size: 4em
@@ -238,7 +238,7 @@ ul
 		.row
 			padding-top: 1%
 			.section
-				border-radius: 5px
+				border-radius: 10px
 				transition: linear 0.2s
 				&:hover
 					box-shadow: 0px 0px 15px -2px #333
@@ -273,3 +273,101 @@ ul
 		&:hover
 			opacity: 1
 
+.footer
+	width: 100%
+	margin-top: 5%
+	padding-top: 2%
+	background-color: black
+	background-image: url('http://www.transparenttextures.com/patterns/dark-matter.png')
+	font:
+		family: $tertiary-font
+	color: $title-text-color
+	.main
+		#sections
+			font-size: 2em
+			.list
+				a
+					color: $title-text-color
+					&:hover
+						text-decoration: none
+				padding: 1%
+				font:
+					family: $secondary-font
+					size: 0.6em
+				.section
+					width: 40%
+					padding: 1%
+					transition: linear 0.1s
+					&:hover
+						background-color: #101010
+						color: white
+		.heading
+			color: #B22400
+			font:
+				family: $tertiary-font
+				size: 2em
+		.subheading
+			color: $title-text-color
+			padding: 1% 0 2% 1%
+			font:
+				family: $secondary-font
+				size: 1.5em
+		.email-form
+			padding-bottom: 5%
+			input[type="text"]
+				width: 60%
+				max-width: 60%
+				padding: 1% 2% 1% 2%
+				outline: none
+				border: none
+				border-radius: 15px
+				background-color: #C9C9C9
+				color: #6B6B6B
+				font:
+					family: $secondary-font
+					size: 1.3em
+				@media (max-width: 768px)
+					font-size: 1.5em
+					padding: 1%
+					width: 40%
+					max-width: 50%
+				&:focus
+					background-color: #D9D9D9
+					box-shadow: 0px 0px 25px -2px #333
+		a
+			color: black
+			&:hover
+				text-decoration: none
+		.subscribe-btn
+			background-color: #B8B8B8
+			border-radius: 10px
+			padding: 1.5%
+			margin-left: 1%
+			font:
+				family: $tertiary-font
+				size: 1.5em
+			transition: linear 0.1s
+			&:hover
+				background-color: #E3E3E3
+	.social-media
+		.links
+			text-align: center
+			padding-bottom: 1%
+			@media (max-width: 768px)
+				margin-top: 5%
+			img
+				width: 30px
+				margin: 0 0.5% 0 0.5%
+				opacity: 0.7
+				transition: linear 0.2s
+				&:hover
+					opacity: 0.9
+		.copyright
+			text-align: center
+			font:
+				family: $secondary-font
+				size: 1.1em
+			a
+				color: white
+				&:hover
+					text-decoration: none
