--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,362 +1,1 @@
-body {
-  position: relative;
-  overflow-y: scroll;
-  overflow-x: hidden;
-  margin: 0px;
-  padding: 0px;
-  background-color: white;
-  font-size: 10px; }
-
-ul {
-  list-style-type: none; }
-
-.topbar {
-  width: 95%;
-  margin: 0 auto;
-  background-color: black;
-  background-image: url("http://www.transparenttextures.com/patterns/dark-matter.png"); }
-  @media (max-width: 768px) {
-    .topbar {
-      width: 100%; } }
-  .topbar a:hover {
-    text-decoration: none; }
-  .topbar .sitename {
-    font-family: "Roboto", sans-serif;
-    font-size: 3.5em;
-    font-weight: 900;
-    color: white;
-    border-right: thin white solid; }
-    .topbar .sitename p {
-      margin: 0; }
-    @media (max-width: 768px) {
-      .topbar .sitename {
-        border: none;
-        font-size: 3.3em; }
-        .topbar .sitename p {
-          float: left;
-          margin: 1% 0 0 1.5%; } }
-  .topbar .topbarright #sections .section {
-    float: left;
-    padding: 10px;
-    font-family: "Open Sans", sans-serif;
-    font-size: 1.5em;
-    text-decoration: none;
-    color: #B2B2B2;
-    transition: linear 0.1s; }
-    .topbar .topbarright #sections .section:hover {
-      color: white;
-      border-bottom: medium solid; }
-    @media (max-width: 768px) {
-      .topbar .topbarright #sections .section {
-        padding-top: 0;
-        font-size: 1.2em; }
-        .topbar .topbarright #sections .section:hover {
-          border: none; } }
-    @media (max-width: 965px) {
-      .topbar .topbarright #sections .section {
-        font-size: 1.3em; } }
-  .topbar .topbarright #accountsection {
-    margin: 10px -20px 0 10px;
-    color: #999999;
-    font-size: 1.5em;
-    font-family: "Roboto", sans-serif, sans-serif; }
-    @media (max-width: 768px) {
-      .topbar .topbarright #accountsection {
-        float: left;
-        padding-top: 3%;
-        margin-bottom: 1%;
-        margin-left: -3%;
-        font-size: 1.1em; } }
-    @media (max-width: 965px) {
-      .topbar .topbarright #accountsection {
-        font-size: 1.1em; } }
-    .topbar .topbarright #accountsection #signin {
-      float: right;
-      padding: 10px;
-      transition: linear 0.1s; }
-      .topbar .topbarright #accountsection #signin:hover {
-        color: #CCCCCC; }
-      @media (max-width: 768px) {
-        .topbar .topbarright #accountsection #signin {
-          padding: 5px; } }
-    .topbar .topbarright #accountsection #create {
-      float: right;
-      padding: 10px;
-      margin-left: 10px;
-      color: #CCCCCC;
-      background-color: #7A0000;
-      border-radius: 5px;
-      transition: linear 0.1s; }
-      .topbar .topbarright #accountsection #create:hover {
-        background-color: #620000;
-        color: #B8B8B8; }
-      @media (max-width: 768px) {
-        .topbar .topbarright #accountsection #create {
-          padding: 5px; } }
-  .topbar .topbarright #edition {
-    width: 50%;
-    position: absolute;
-    top: 120px; }
-    @media (max-width: 768px) {
-      .topbar .topbarright #edition {
-        visibility: hidden; } }
-    .topbar .topbarright #edition .edition, .topbar .topbarright #edition .choice {
-      font-size: 1.3em;
-      font-family: "Roboto", sans-serif;
-      color: #B2B2B2;
-      float: left;
-      padding: 1%; }
-  .topbar .topbarright #searchbar {
-    position: absolute;
-    top: 110px;
-    right: 0;
-    margin-right: -3%; }
-    .topbar .topbarright #searchbar a:visited {
-      text-decoration: none; }
-    .topbar .topbarright #searchbar a img {
-      max-width: 35px;
-      opacity: 0.8; }
-    .topbar .topbarright #searchbar input[type="text"] {
-      max-width: 80%;
-      padding: 3% 4% 3% 4%;
-      outline: none;
-      border: none;
-      border-radius: 15px;
-      background-color: #C9C9C9;
-      color: #6B6B6B;
-      font-family: "Open Sans", sans-serif;
-      font-size: 1.3em; }
-      @media (max-width: 768px) {
-        .topbar .topbarright #searchbar input[type="text"] {
-          font-size: 1.1em;
-          padding: 2% 2% 2% 3%; } }
-      .topbar .topbarright #searchbar input[type="text"]:focus {
-        background-color: #D9D9D9;
-        box-shadow: 0px 0px 25px -2px #333; }
-    @media (max-width: 768px) {
-      .topbar .topbarright #searchbar {
-        position: relative;
-        top: 0;
-        right: 0;
-        padding-top: 3%;
-        float: right;
-        margin-top: 2%;
-        margin-right: -3%; } }
-
-.landing-view {
-  width: 95%;
-  margin: 0 auto;
-  padding-top: 0.2%;
-  padding-bottom: 1%; }
-  @media (max-width: 768px) {
-    .landing-view {
-      width: 100%; } }
-  .landing-view #featured-article {
-    padding: 0;
-    overflow: hidden; }
-    .landing-view #featured-article .item {
-      height: 500px; }
-      @media (max-width: 768px) {
-        .landing-view #featured-article .item {
-          height: 300px; } }
-      .landing-view #featured-article .item img {
-        height: 100%;
-        width: 100%; }
-    .landing-view #featured-article #text {
-      width: 100%;
-      margin: 0 auto;
-      position: absolute;
-      bottom: 0;
-      background: black;
-      opacity: 0.8;
-      padding: 1.5%;
-      color: #D1D1D1;
-      font-family: "Oswald";
-      transition: linear 0.1s; }
-      .landing-view #featured-article #text #title {
-        font-size: 4em;
-        padding: 1% 0 1% 0; }
-        @media (max-width: 768px) {
-          .landing-view #featured-article #text #title {
-            font-size: 2.5em; } }
-      .landing-view #featured-article #text #caption {
-        font-size: 1.8em;
-        font-family: "Open Sans", sans-serif;
-        font-weight: 100; }
-        @media (max-width: 768px) {
-          .landing-view #featured-article #text #caption {
-            font-size: 1em; } }
-      .landing-view #featured-article #text:hover {
-        opacity: 0.9;
-        color: #DEDEDE;
-        transform: scale(1.01);
-        -webkit-transform: scale(1.01);
-        -moz-transform: scale(1.01);
-        -o-transform: scale(1.01); }
-  .landing-view #weathernstuff {
-    padding-top: 1%; }
-    .landing-view #weathernstuff #weather #date {
-      font-family: "Rajdhani";
-      font-size: 2.5em;
-      font-weight: 600; }
-    .landing-view #weathernstuff #weather #location {
-      padding: 1%; }
-    .landing-view #weathernstuff #latest-news #title {
-      width: 80%;
-      font-family: "Rajdhani";
-      font-style: italic;
-      font-size: 2.2em;
-      font-weight: 600;
-      border-bottom: thin black solid; }
-    .landing-view #weathernstuff #latest-news #articles {
-      font-family: "Roboto", sans-serif;
-      font-size: 1.2em; }
-      .landing-view #weathernstuff #latest-news #articles a {
-        color: black; }
-        .landing-view #weathernstuff #latest-news #articles a:hover {
-          text-decoration: none; }
-      .landing-view #weathernstuff #latest-news #articles .article {
-        margin: 2% 0 2% 0;
-        border-bottom: thin black dotted;
-        opacity: 0.9;
-        transition: linear 0.1s; }
-        .landing-view #weathernstuff #latest-news #articles .article:hover {
-          opacity: 1; }
-
-.main-content {
-  width: 95%;
-  margin: 0 auto; }
-  .main-content a {
-    color: black; }
-    .main-content a:hover {
-      text-decoration: none; }
-  .main-content #front-page-articles .row {
-    padding-top: 1%; }
-    .main-content #front-page-articles .row .section {
-      border-radius: 10px;
-      transition: linear 0.2s; }
-      .main-content #front-page-articles .row .section:hover {
-        box-shadow: 0px 0px 15px -2px #333; }
-      .main-content #front-page-articles .row .section .tag {
-        font-family: "Roboto", sans-serif;
-        font-size: 2em; }
-      .main-content #front-page-articles .row .section .article {
-        padding: 0 1% 0 1%;
-        font-family: "Roboto", sans-serif;
-        font-size: 1.5em; }
-        @media (max-width: 965px) {
-          .main-content #front-page-articles .row .section .article {
-            font-size: 1.25em; } }
-        @media (max-width: 768px) {
-          .main-content #front-page-articles .row .section .article {
-            font-size: 1.8em; } }
-        @media (max-width: 486px) {
-          .main-content #front-page-articles .row .section .article {
-            font-size: 1.4em; } }
-        .main-content #front-page-articles .row .section .article .caption {
-          font-size: 0.7em;
-          font-weight: 400; }
-  .main-content #more-news {
-    font-family: "Roboto", sans-serif;
-    font-size: 3em;
-    font-weight: 600;
-    font-style: italic;
-    margin-top: -1%;
-    opacity: 0.9;
-    transition: linear 0.1s; }
-    .main-content #more-news:hover {
-      opacity: 1; }
-
-.footer {
-  width: 100%;
-  margin-top: 5%;
-  padding-top: 2%;
-  background-color: black;
-  background-image: url("http://www.transparenttextures.com/patterns/dark-matter.png");
-  font-family: "Oswald";
-  color: #B2B2B2; }
-  .footer .main #sections {
-    font-size: 2em; }
-    .footer .main #sections .list {
-      padding: 1%;
-      font-family: "Open Sans", sans-serif;
-      font-size: 0.6em; }
-      .footer .main #sections .list a {
-        color: #B2B2B2; }
-        .footer .main #sections .list a:hover {
-          text-decoration: none; }
-      .footer .main #sections .list .section {
-        width: 40%;
-        padding: 1%;
-        transition: linear 0.1s; }
-        .footer .main #sections .list .section:hover {
-          background-color: #101010;
-          color: white; }
-  .footer .main .heading {
-    color: #B22400;
-    font-family: "Oswald";
-    font-size: 2em; }
-  .footer .main .subheading {
-    color: #B2B2B2;
-    padding: 1% 0 2% 1%;
-    font-family: "Open Sans", sans-serif;
-    font-size: 1.5em; }
-  .footer .main .email-form {
-    padding-bottom: 5%; }
-    .footer .main .email-form input[type="text"] {
-      width: 60%;
-      max-width: 60%;
-      padding: 1% 2% 1% 2%;
-      outline: none;
-      border: none;
-      border-radius: 15px;
-      background-color: #C9C9C9;
-      color: #6B6B6B;
-      font-family: "Open Sans", sans-serif;
-      font-size: 1.3em; }
-      @media (max-width: 768px) {
-        .footer .main .email-form input[type="text"] {
-          font-size: 1.5em;
-          padding: 1%;
-          width: 40%;
-          max-width: 50%; } }
-      .footer .main .email-form input[type="text"]:focus {
-        background-color: #D9D9D9;
-        box-shadow: 0px 0px 25px -2px #333; }
-  .footer .main a {
-    color: black; }
-    .footer .main a:hover {
-      text-decoration: none; }
-  .footer .main .subscribe-btn {
-    background-color: #B8B8B8;
-    border-radius: 10px;
-    padding: 1.5%;
-    margin-left: 1%;
-    font-family: "Oswald";
-    font-size: 1.5em;
-    transition: linear 0.1s; }
-    .footer .main .subscribe-btn:hover {
-      background-color: #E3E3E3; }
-  .footer .social-media .links {
-    text-align: center;
-    padding-bottom: 1%; }
-    @media (max-width: 768px) {
-      .footer .social-media .links {
-        margin-top: 5%; } }
-    .footer .social-media .links img {
-      width: 30px;
-      margin: 0 0.5% 0 0.5%;
-      opacity: 0.7;
-      transition: linear 0.2s; }
-      .footer .social-media .links img:hover {
-        opacity: 0.9; }
-  .footer .social-media .copyright {
-    text-align: center;
-    font-family: "Open Sans", sans-serif;
-    font-size: 1.1em; }
-    .footer .social-media .copyright a {
-      color: white; }
-      .footer .social-media .copyright a:hover {
-        text-decoration: none; }
-
-/*# sourceMappingURL=main.css.map */
+body{position:relative;overflow-y:scroll;overflow-x:hidden;margin:0px;padding:0px;background-color:white;font-size:10px}ul{list-style-type:none}.topbar{width:95%;margin:0 auto;background-color:black;background-image:url('http://www.transparenttextures.com/patterns/dark-matter.png')}@media (max-width: 768px){.topbar{width:100%;}}.topbar a:hover{text-decoration:none}.topbar .sitename{font-family:'Roboto',sans-serif;font-size:3.5em;font-weight:900;color:white;border-right:thin white solid}.topbar .sitename p{margin:0}@media (max-width: 768px){.topbar .sitename{border:none;font-size:3.3em;}.topbar .sitename p{float:left;margin:1% 0 0 1.5%}}.topbar .topbarright #sections .section{float:left;padding:10px;font-family:'Open Sans',sans-serif;font-size:1.5em;text-decoration:none;color:#B2B2B2;transition:linear 0.1s}.topbar .topbarright #sections .section:hover{color:white;border-bottom:medium solid}@media (max-width: 768px){.topbar .topbarright #sections .section{padding-top:0;font-size:1.2em;}.topbar .topbarright #sections .section:hover{border:none}}@media (max-width: 965px){.topbar .topbarright #sections .section{font-size:1.3em;}}.topbar .topbarright #accountsection{margin:10px -20px 0 10px;color:#999999;font-size:1.5em;font-family:'Roboto',sans-serif,sans-serif}@media (max-width: 768px){.topbar .topbarright #accountsection{float:left;padding-top:3%;margin-bottom:1%;margin-left:-3%;font-size:1.1em;}}@media (max-width: 965px){.topbar .topbarright #accountsection{font-size:1.1em;}}.topbar .topbarright #accountsection #signin{float:right;padding:10px;transition:linear 0.1s}.topbar .topbarright #accountsection #signin:hover{color:#CCCCCC}@media (max-width: 768px){.topbar .topbarright #accountsection #signin{padding:5px;}}.topbar .topbarright #accountsection #create{float:right;padding:10px;margin-left:10px;color:#CCCCCC;background-color:#7A0000;border-radius:5px;transition:linear 0.1s}.topbar .topbarright #accountsection #create:hover{background-color:#620000;color:#B8B8B8}@media (max-width: 768px){.topbar .topbarright #accountsection #create{padding:5px;}}.topbar .topbarright #edition{width:50%;position:absolute;top:120px}@media (max-width: 768px){.topbar .topbarright #edition{visibility:hidden;}}.topbar .topbarright #edition .edition,.topbar .topbarright #edition .choice{font-size:1.3em;font-family:'Roboto',sans-serif;color:#B2B2B2;float:left;padding:1%}.topbar .topbarright #searchbar{position:absolute;top:110px;right:0;margin-right:-3%}.topbar .topbarright #searchbar img{cursor:pointer;max-width:35px;opacity:0.8}.topbar .topbarright #searchbar input[type="text"]{max-width:80%;padding:3% 4% 3% 4%;outline:none;border:none;border-radius:15px;background-color:#C9C9C9;color:#6B6B6B;font-family:'Open Sans',sans-serif;font-size:1.3em}@media (max-width: 768px){.topbar .topbarright #searchbar input[type="text"]{font-size:1.1em;padding:2% 2% 2% 3%;}}.topbar .topbarright #searchbar input[type="text"]:focus{background-color:#D9D9D9;box-shadow:0px 0px 25px -2px #333}@media (max-width: 768px){.topbar .topbarright #searchbar{position:relative;top:0;right:0;padding-top:3%;float:right;margin-top:2%;margin-right:-3%;}}.landing-view{width:95%;margin:0 auto;padding-top:0.2%;padding-bottom:1%}@media (max-width: 768px){.landing-view{width:100%;}}.landing-view #featured-article{padding:0;overflow:hidden}.landing-view #featured-article .item{height:500px}@media (max-width: 768px){.landing-view #featured-article .item{height:300px;}}.landing-view #featured-article .item img{height:100%;width:100%}.landing-view #featured-article #text{width:100%;margin:0 auto;position:absolute;bottom:0;background:black;opacity:0.8;padding:1.5%;color:#D1D1D1;font-family:'Oswald';transition:linear 0.1s}.landing-view #featured-article #text #title{font-size:4em;padding:1% 0 1% 0}@media (max-width: 768px){.landing-view #featured-article #text #title{font-size:2.5em;}}.landing-view #featured-article #text #caption{font-size:1.8em;font-family:'Open Sans',sans-serif;font-weight:100}@media (max-width: 768px){.landing-view #featured-article #text #caption{font-size:1em;}}.landing-view #featured-article #text:hover{opacity:0.9;color:#DEDEDE;transform:scale(1.01);-webkit-transform:scale(1.01);-moz-transform:scale(1.01);-o-transform:scale(1.01)}.landing-view #weathernstuff{padding-top:1%}.landing-view #weathernstuff #weather #date{font-family:'Rajdhani';font-size:2.5em;font-weight:600}.landing-view #weathernstuff #weather #location{padding:1%}.landing-view #weathernstuff #latest-news #title{width:80%;font-family:'Rajdhani';font-style:italic;font-size:2.2em;font-weight:600;border-bottom:thin black solid}.landing-view #weathernstuff #latest-news #articles{font-family:'Roboto',sans-serif;font-size:1.2em}.landing-view #weathernstuff #latest-news #articles a{color:black}.landing-view #weathernstuff #latest-news #articles a:hover{text-decoration:none}.landing-view #weathernstuff #latest-news #articles .article{margin:2% 0 2% 0;border-bottom:thin black dotted;opacity:0.9;transition:linear 0.1s}.landing-view #weathernstuff #latest-news #articles .article:hover{opacity:1}.main-content{width:95%;margin:0 auto}.main-content a{color:black}.main-content a:hover{text-decoration:none}.main-content #front-page-articles .row{padding-top:1%}.main-content #front-page-articles .row .section{border-radius:10px;transition:linear 0.2s}.main-content #front-page-articles .row .section:hover{box-shadow:0px 0px 15px -2px #333}.main-content #front-page-articles .row .section .tag{font-family:'Roboto',sans-serif;font-size:2em}.main-content #front-page-articles .row .section .article{padding:0 1% 0 1%;font-family:'Roboto',sans-serif;font-size:1.5em}@media (max-width: 965px){.main-content #front-page-articles .row .section .article{font-size:1.25em;}}@media (max-width: 768px){.main-content #front-page-articles .row .section .article{font-size:1.8em;}}@media (max-width: 486px){.main-content #front-page-articles .row .section .article{font-size:1.4em;}}.main-content #front-page-articles .row .section .article .caption{font-size:0.7em;font-weight:400}.main-content #more-news{font-family:'Roboto',sans-serif;font-size:3em;font-weight:600;font-style:italic;margin-top:-1%;opacity:0.9;transition:linear 0.1s}.main-content #more-news:hover{opacity:1}.footer{width:100%;margin-top:5%;padding-top:2%;background-color:black;background-image:url('http://www.transparenttextures.com/patterns/dark-matter.png');font-family:'Oswald';color:#B2B2B2}.footer .main #sections{font-size:2em}.footer .main #sections .list{padding:1%;font-family:'Open Sans',sans-serif;font-size:0.6em}.footer .main #sections .list .section{cursor:pointer;color:#B2B2B2;width:40%;padding:1%;transition:linear 0.1s}.footer .main #sections .list .section:hover{background-color:#101010;color:white}.footer .main .heading{color:#B22400;font-family:'Oswald';font-size:2em}.footer .main .subheading{color:#B2B2B2;padding:1% 0 2% 1%;font-family:'Open Sans',sans-serif;font-size:1.5em}.footer .main .email-form{padding-bottom:5%}.footer .main .email-form input[type="text"]{width:60%;max-width:60%;padding:1% 2% 1% 2%;outline:none;border:none;border-radius:15px;background-color:#C9C9C9;color:#6B6B6B;font-family:'Open Sans',sans-serif;font-size:1.3em}@media (max-width: 768px){.footer .main .email-form input[type="text"]{font-size:1.5em;padding:1%;width:40%;max-width:50%;}}.footer .main .email-form input[type="text"]:focus{background-color:#D9D9D9;box-shadow:0px 0px 25px -2px #333}.footer .main a{color:black}.footer .main a:hover{text-decoration:none}.footer .main .subscribe-btn{background-color:#B8B8B8;border-radius:10px;padding:1.5%;margin-left:1%;font-family:'Oswald';font-size:1.5em;transition:linear 0.1s}.footer .main .subscribe-btn:hover{background-color:#E3E3E3}.footer .social-media .links{text-align:center;padding-bottom:1%}@media (max-width: 768px){.footer .social-media .links{margin-top:5%;}}.footer .social-media .links img{width:30px;margin:0 0.5% 0 0.5%;opacity:0.7;transition:linear 0.2s}.footer .social-media .links img:hover{opacity:0.9}.footer .social-media .copyright{text-align:center;font-family:'Open Sans',sans-serif;font-size:1.1em}.footer .social-media .copyright a{color:white}.footer .social-media .copyright a:hover{text-decoration:none}
