updated article page

--- a/article-page.jade
+++ b/article-page.jade
@@ -9,6 +9,7 @@ html
 		link(rel="stylesheet", href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css", type="text/css")
 		link(rel="stylesheet", href="http://fonts.googleapis.com/css?family=Poiret+One|Indie+Flower|Pacifico|Signika:600|Ubuntu+Condensed|Roboto:500|Oswald|Roboto+Slab|Open+Sans:600|Fresca|Rajdhani|Martel+Sans|Hind", type="text/css")
 		link(rel="stylesheet", href="assets/css/article.css", type="text/css")
+		link(rel="shortcut icon", type="image/x-icon", href="assets/img/icon.ico")
 		script(src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js")
 		script(src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js")
 
@@ -35,7 +36,37 @@ html
 				img(src="http://fillmurray.com/g/900/400")
 				p Quisque malesuada mi a diam vestibulum, eu varius tellus molestie. Nam et ornare magna. Quisque tincidunt augue nisi, eget iaculis purus cursus nec. In quis feugiat lectus. Nullam neque dui, pulvinar nec ultrices vitae, pellentesque vitae purus. Sed et lectus nec metus euismod molestie eu id odio. Vestibulum rhoncus sodales leo, sed condimentum velit vulputate sed. Suspendisse mollis nisi id erat rutrum posuere. Integer lobortis in lacus id consectetur. Mauris turpis erat, semper quis porta sed, fringilla at leo. Maecenas cursus, augue id consequat hendrerit, dui mi sollicitudin tellus, ut posuere nibh diam ac erat. Aenean condimentum ex mattis dui congue, nec consectetur mi imperdiet. Suspendisse in sem non enim dignissim lobortis sit amet id augue. Fusce porttitor nunc ex, in tempor lectus eleifend vel.
 				p Suspendisse auctor risus ac efficitur maximus. Maecenas eget diam hendrerit, facilisis massa et, cursus lacus. Proin egestas dui ut arcu porta imperdiet. Suspendisse neque odio, consequat vitae arcu ut, tristique facilisis tellus. Nunc ultricies mauris sed libero blandit semper. In non leo fermentum, congue nisi nec, venenatis nisi. Vivamus imperdiet consequat elit quis efficitur. Nunc faucibus id ex sed hendrerit. Suspendisse potenti. Nullam purus erat, fringilla et maximus eu, imperdiet quis dolor. Suspendisse potenti. Fusce fermentum nec lectus cursus pulvinar. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
+				p Nunc eleifend varius nisi vitae porttitor. Aenean a ligula eget nulla cursus vulputate sed id elit. Vivamus a sapien a dolor scelerisque pulvinar rutrum sed odio. Vivamus aliquam nisl in mauris luctus, a malesuada ligula congue. Nam elementum efficitur magna vel condimentum. In nec posuere orci. Etiam non urna ac leo porta laoreet. Aliquam sagittis sapien nibh, non accumsan massa ultricies quis. Cras massa purus, tincidunt in tristique et, semper non ligula. Curabitur rhoncus hendrerit arcu ullamcorper tempus. Cras varius pellentesque lectus, ullamcorper sodales massa cursus ut. Maecenas sed vestibulum nulla. Duis aliquet, ex ut venenatis blandit, massa diam sollicitudin massa, ut hendrerit nibh ligula nec sem.
+				p Fusce varius dapibus tellus, id lobortis metus posuere at. Morbi sed nulla in odio semper consectetur a sed ligula. Vestibulum luctus, nulla eu tempus vehicula, tellus diam pellentesque erat, non molestie massa lectus non sem. Vestibulum pretium nibh in leo sodales dapibus a nec ipsum. Nam sed ligula sed orci placerat vehicula sed et augue. Praesent ut fringilla mi, nec hendrerit mi. Morbi ante ligula, lacinia quis metus ac, ultrices varius tortor. Ut sit amet venenatis metus. Fusce facilisis velit et molestie mattis.
 				p Integer finibus ornare auctor. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Mauris urna elit, fringilla sit amet dictum a, varius quis dui.
+				
+
+				.col-xs-12.similar
+					.sim-heading Related Articles
+					.col-xs-4.sim-art
+						img(src="http://fillmurray.com/201/151")
+						.sim-title Commodo congue ipsum pulvinar. Ut ac erat ex.
+					.col-xs-4.sim-art
+						img(src="http://fillmurray.com/202/150")
+						.sim-title Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+					.col-xs-4.sim-art
+						img(src="http://fillmurray.com/201/150")
+						.sim-title Nam et ornare magna. Quisque tincidunt augue nisi, eget iaculis
 			.col-md-3.col-xs-12.left-bar
+				h4.left-heading Most Popular
+				.col-md-12.col-xs-3.side-art
+					img(src="http://fillmurray.com/300/200")
+					.side-title Maecenas eget diam hendrerit, facilisis massa et.
+				.col-md-12.col-xs-3.side-art
+					img(src="http://fillmurray.com/301/200")
+					.side-title Vestibulum ante ipsum primis in faucibus orci.
+				.col-md-12.col-xs-3.side-art
+					img(src="http://fillmurray.com/300/201")
+					.side-title Duis id urna lorem. Praesent fermentum turpis nec ipsum dapibus.
+				.col-md-12.col-xs-3.side-art
+					img(src="http://fillmurray.com/300/202")
+					.side-title Nulla vel justo posuere, condimentum eros a.
+				.col-xs-12.text-right
+					h4.more Browse more popular articles
 
 		include includes/footer.jade
