--- a/includes/top-bar.jade
+++ b/includes/top-bar.jade
@@ -1,5 +1,5 @@
 .topbar.row
-	a(href="").col-sm-2.col-xs-12.sitename 
+	a(href="http://quanhuynh.org/news_site_template/").col-sm-2.col-xs-12.sitename 
 			p LOREM 
 			p IPSUM 
 			p POST
