--- a/index.jade
+++ b/index.jade
@@ -9,6 +9,7 @@ html
 		link(rel="stylesheet", href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css", type="text/css")
 		link(rel="stylesheet", href="http://fonts.googleapis.com/css?family=Poiret+One|Indie+Flower|Pacifico|Signika:600|Ubuntu+Condensed|Roboto:500|Oswald|Roboto+Slab|Open+Sans:600|Fresca|Rajdhani|Martel+Sans|Hind", type="text/css")
 		link(rel="stylesheet", href="assets/css/main.css", type="text/css")
+		link(rel="shortcut icon", type="image/x-icon", href="assets/img/icon.ico")
 		script(src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js")
 		script(src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js")
 
